--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
 
         <button type="submit">Entrar</button>
       </form>
-      <p>Não tem conta? <a href="{{ url_for('registro') }}">Registrar</a></p>
+      <p>Não tem conta? <a href="{{ url_for('register') }}">Registrar</a></p>
     </div>
   </body>
 </html>
