--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <h2>Registrar</h2>
-      <form method="POST" action="{{ url_for('registro') }}">
+      <form method="POST" action="{{ url_for('register') }}">
         <label for="nome">Nome</label>
         <input type="text" id="nome" name="nome" required />
 
