--- a/templates/feed.html
+++ b/templates/feed.html
@@ -31,7 +31,15 @@
       </form>
       <hr />
       {% if posts %} {% for post, tempo in posts %}
-      <p><strong>{{ post.autor.apelido }}:</strong> {{ post.texto|e }}</p>
+      <p>
+        <strong>
+          <a href="{{ url_for('perfil') }}?usuario={{ post.autor.apelido }}"
+            >{{ post.autor.apelido }}</a
+          >:
+        </strong>
+        {{ post.texto|e }}
+      </p>
+
       <small>{{ tempo }}</small>
       <hr />
       {% endfor %} {% else %}
