--- a/static/style.css
+++ b/static/style.css
@@ -76,13 +76,15 @@ a:hover {
 }
 
 a {
-  color: #1e90ff;
+  color: #000000;
   font-weight: bold;
   text-decoration: none;
   transition: color 0.3s;
+  font-weight: bold;
 }
 
 a:hover {
-  color: #104e8b;
+  color: #1f1f1f;
   text-decoration: underline;
+  font-weight: bold;
 }
