--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,17 @@
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
-  background: #f5f5f5;
+  background: #000000;
   color: #333;
 }
 .container {
   max-width: 600px;
   margin: auto;
-  background: white;
+  background: rgb(0, 0, 0);
   padding: 20px 30px;
-  box-shadow: 0 0 10px #ccc;
+  box-shadow: 0 0 10px #414141;
   border-radius: 6px;
+  border-color: white;
 }
 nav a {
   margin-right: 10px;
