--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@ body {
   margin: auto;
   background: rgb(0, 0, 0);
   padding: 20px 30px;
-  box-shadow: 0 0 10px #414141;
+  box-shadow: 0 0 10px #ffffff;
   border-radius: 6px;
   border-color: white;
 }
@@ -54,7 +54,7 @@ label {
   font-weight: bold;
   display: block;
   margin-bottom: 6px;
-  color: #555;
+  color: #999999;
 }
 .error {
   color: #d9534f;
@@ -77,7 +77,7 @@ a:hover {
 }
 
 a {
-  color: #000000;
+  color: #ffffff;
   font-weight: bold;
   text-decoration: none;
   transition: color 0.3s;
