--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,13 @@
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
-  background: #000000;
-  color: #5f5f5f;
+  background: rgb(8, 8, 8);
+  color: #999999;
 }
 .container {
   max-width: 600px;
   margin: auto;
-  background: rgb(7, 7, 7);
+  background: rgb(0, 0, 0);
   padding: 20px 30px;
   box-shadow: 0 0 10px #ffffff;
   border-radius: 6px;
