--- a/templates/feed.html
+++ b/templates/feed.html
@@ -24,7 +24,7 @@
           id="texto"
           name="texto"
           rows="4"
-          placeholder="Digite sua postagem..."
+          placeholder="Quer contar oque hoje?..."
           required
         ></textarea>
         <button type="submit">Postar</button>
