--- a/templates/login.html
+++ b/templates/login.html
@@ -14,14 +14,28 @@
       <h2>Entrar</h2>
       <form method="POST" action="{{ url_for('login') }}">
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" required />
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          required
+        />
 
         <label for="senha">Senha</label>
-        <input type="password" id="senha" name="senha" required />
+        <input
+          type="password"
+          id="senha"
+          name="senha"
+          placeholder="Senha"
+          required
+        />
 
         <button type="submit">Entrar</button>
       </form>
-      <p>Não tem conta? <a href="{{ url_for('register') }}">Registrar</a></p>
+      <p>
+        Ainda NÃO tem conta? <a href="{{ url_for('register') }}">Registrar</a>
+      </p>
     </div>
   </body>
 </html>
