--- a/templates/login.html
+++ b/templates/login.html
@@ -13,21 +13,21 @@
     <div class="container">
       <h2>Entrar</h2>
       <form method="POST" action="{{ url_for('login') }}">
-        <label for="email">Email</label>
+        <label for="email">Email:</label>
         <input
           type="email"
           id="email"
           name="email"
-          placeholder="Email"
+          placeholder="Digite seu Email"
           required
         />
 
-        <label for="senha">Senha</label>
+        <label for="senha">Senha:</label>
         <input
           type="password"
           id="senha"
           name="senha"
-          placeholder="Senha"
+          placeholder="Digite sua Senha"
           required
         />
 
