--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login - MyOpinion</title>
+    <title>Login - Opinion</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>Faça Login para entrar</h2>
+      <h2>Bem-vindos à Opinion</h2>
       <form method="POST" action="{{ url_for('login') }}">
         <label for="email"></label>
         <input
