Atualização do login

--- a/templates/login.html
+++ b/templates/login.html
@@ -37,5 +37,17 @@
         Ainda NÃO tem conta? <a href="{{ url_for('register') }}">Registrar</a>
       </p>
     </div>
+    <script>
+      window.addEventListener("load", function () {
+        // Adiciona um estado ao histórico quando a página carrega
+        history.pushState(null, document.title, location.href);
+
+        // Adiciona um listener para o evento 'popstate' (disparado ao navegar no histórico, ex: botão de voltar)
+        window.addEventListener("popstate", function (event) {
+          // Recarrega a página atual
+          location.reload();
+        });
+      });
+    </script>
   </body>
 </html>
