Repaginação no login 5.2

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>Bem-vindos à Opinion</h2>
+      <h2>Bem-vindos a Opinion</h2>
       <form method="POST" action="{{ url_for('login') }}">
         <label for="email"></label>
         <input
