--- a/static/style.css
+++ b/static/style.css
@@ -89,3 +89,36 @@ a:hover {
   text-decoration: underline;
   font-weight: bold;
 }
+
+.flashes {
+  list-style: none;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+.flashes li {
+  padding: 5px;
+  margin-bottom: 5px;
+  border-radius: 3px;
+  font-weight: bold;
+}
+.flashes .info {
+  background-color: #d1ecf1;
+  color: #0c5460;
+  border: 1px solid #bee5eb;
+}
+.flashes .success {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+.flashes .warning {
+  background-color: #fff3cd;
+  color: #856404;
+  border: 1px solid #ffeeba;
+}
+.flashes .danger {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
